frontend/src/App.css
:root {
  --background-color-main: hsl(60, 15%, 88%);
  --box-shadow-main: 7px 4px 4px hsl(0, 1%, 48%);
  --box-shadow-secondary: 4px 3px 3px hsl(0, 1%, 48%);
  --card-bg-color: hsl(60, 45%, 78%);
  --card-bg-color-secondary: hsl(60, 59%, 75%);
}

a:hover {
  cursor: pointer;
  font-weight: 600;
}

body {
  background-color: var(--background-color-main);
  color: hsl(0, 4%, 14%);
  font-size: 1rem;
}

button,
.btn {
  box-shadow: var(--box-shadow-secondary);
  height: 40px;
  margin: 5px;
}

button:hover {
  font-weight: bold;
}

footer {
  margin-bottom: 1rem;
  margin-top: 1rem;
  text-align: center;
}

h1,
h2 {
  font-family: Lato;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin: 1.2rem 0;
  text-align: center;
}

img {
  border-radius: 10px;
  box-shadow: var(--box-shadow-secondary);
}

input {
  margin: 3px;
}

label {
  font-weight: bold;
}

ul {
  list-style: none;
}

nav ul li {
  margin: 1rem;
}

nav ul li a {
  font-size: 1.1rem !important;
}

nav ul li a:hover {
  font-weight: bold;
}

/* Ids */
#nav-section {
  background-color: var(--card-bg-color);
}

/* Classes */
.lowerImage {
  margin-top: 1.2rem;
  margin-bottom: 1.2rem;
}

.lowerImage img {
  max-width: 400px;
}


/* Media Queries */
@media screen and (max-width: 991px) {
  nav ul {
    margin: auto;
  }

  nav ul li {
    margin: 0.4rem;
  }

  #nav-section {
    max-width: 250px;
    margin: auto;
  }
}

@media screen and (max-width: 420px) {
  .lowerImage {
    margin-bottom: 1.1rem;
    margin-top: 1.1rem;
  }

  .lowerImage img {
    max-width: 280px;
  }
}

